fixed overflow

--- a/client/src/assets/styles/UserProfile.css
+++ b/client/src/assets/styles/UserProfile.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .user-profile {
   margin-top: 30px;
 }
